--- a/src/app/components/reporteestadocuentaproveedor-form/reporteestadocuentaproveedor-form.component.html
+++ b/src/app/components/reporteestadocuentaproveedor-form/reporteestadocuentaproveedor-form.component.html
@@ -1,1 +1,36 @@
-<p>reporteestadocuentaproveedor-form works!</p>
+<mat-form-field [formGroup]="filtroCuentaContable" appearance="fill">
+  <mat-label>Cuenta Contable</mat-label>
+  <mat-select formControlName="cuentaContable">
+    <mat-option>--</mat-option>
+    <mat-option *ngFor="let cuenta of cuentaContableList" [value]="cuenta.Cuenta_Id">
+      {{cuenta.sCtaCodigo}}
+    </mat-option>
+  </mat-select>
+  
+</mat-form-field>
+<mat-form-field [formGroup]="filtroMes" appearance="fill">
+  <mat-label>Mes</mat-label>
+  <mat-select formControlName="mesControl">
+    <mat-option>--</mat-option>
+    <mat-option *ngFor="let mes of mesList" [value]="mes.sTGeValor">
+      {{mes.sTGeDescripcion}}
+    </mat-option>
+  </mat-select>
+</mat-form-field>
+
+<mat-table [dataSource]="pageSlice" >
+  <ng-container matColumnDef="sDPaNumero">
+    <mat-header-cell *matHeaderCellDef> Documento </mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.sDPaNumero}} </mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="dDPaFecha">
+    <mat-header-cell *matHeaderCellDef> Fecha </mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.dDPaFecha}} </mat-cell>
+  </ng-container>
+
+  
+
+  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+</mat-table>
